 	- don't require a signal event source to be enabled for the child event source to work;
 	- change type for address family to "int";
 	- remove sd-rtnl module;
 	- add support for CLOCK_BOOTTIME in sd-event module;
 * logind:
 	- allow switching to unused VTs via SwitchTo();
 	- use const modifier for id field in Session struct;
 	- update systemd-user PAM configuration file;
 * units:
 	- bring systemd-tmpfiles-setup-dev.service closer to systemd-tmpfiles-setup.service;
 	- conditionalize static device node logic on CAP_SYS_MODULES instead of CAP_MKNOD;
 	- conditionalize configfs and debugfs with CAP_SYS_RAWIO;
 	- make ExecStopPost action part of ExecStart;
 	- remove systemd-ask-password-console path and service;
 	- remove systemd-ask-password-wall path and service;
 * kdbus:
 	- update header;
 * systemctl:
 	- show StatusErrno value in "systemctl status";
 	- remove property argument option;
 	- don't open the password agent;
 	- remove no-ask-password argument option;
 	- remove help command;
 	- use list-unit-files to get "all" units in bash-completion;
 	- prevent mangling unit names in bash-completion;
 	- hide legend by arg_no_legend argument;
 	- change return type to void in *_help functions;
 * shared:
 	- consider 0x7F(DEL) a control chracter;
 	- don't consider tabs special in string_has_cc() anymore;
 	- add string table entries for mips-le archs which were missing;
 	- remove unused functions;
 	- use strjoin in execute_directory function;
 	- remove ring util;
 	- add function to open temp files in selinux mode;
 	- don't make ~/.local/share/systemd/user a symlink;
 	- quote more shell characters in envfiles;
 	- fix error message in socket label util;
 	- rename id _UNIT_FILE_PRESET_MODE_MAX to _UNIT_FILE_PRESET_MAX;
 	- remove eventfd util;
 	- remove ask-password-api util;
 	- add quotes to warning message in log module;
 	- make SYSTEMD_UNIT_PATH more flexible;
 	- add clock_boottime_or_monotonic in time util;